
@startuml sprites
class pygame.sprite.Sprite{}

class animations.AnimatedSprite extends pygame.sprite.Sprite{
    + speed_multiplier: number
    + position: numpy.ndarray
    + modifiers: list[function]
    + current_animation: systems.Resource
    + current_frame_size: tuple[number,number]
    + num_frames: number
    + current_frame: number
    + acc_times: list[number]
    + total_elapsed_time: number
    - buffer_image: pygame.Surface

    + AnimatedSprite(frames: systems.Resource, position: numpy.ndarray)
    + on_animation_finished()
    + update(elapsed_time: number)
    + add_image_modifier(modifier: function)
    + remove_image_modifier(modifier: function)
    + setup_frames(frames: list[AnimationFrame])
    + set_animation(animation: systems.Resource)
    + set_speed_multiplier(multiplier: number)
    + set_image(image: pygame.Surface)
    + set_temp_image(image: pygame.Surface)
    - binary_search_time(time: number): number
    - apply_image_modifiers()
}

animations.AnimatedSprite --> systems.ResourceManager

class animations.AnimationFrame{
    + AnimationFrame(image: pygame, duration: number)
    + get_image(): pygame
    + get_duration(): number 
}

animations.AnimatedSprite "1" o-- "N" animations.AnimationFrame: frames

class animations.Effect extends animations.AnimatedSprite{
    + on_animation_finished()
}

class animations.ExplosionEffect extends animations.Effect{
    + ExplosionEffect(position: np.array)
}
@enduml